# TP-Final-Dune-Grupo-1

./: .gitignore  .gitmodules  3by3.yaml  CMakeLists.txt  Celda.h  Client  Editor  Makefile  Mapa.h  Navegador.h  README.md  Server  client_main.cpp  cmake_install.cmake  data.yaml  editor  lol.yaml  server_celda.cpp  server_main.cpp  server_mapa.cpp  server_navegador.cpp  terrain.txt  ui_clientmainwindow.h  ui_enterportwindow.h  ui_mainwindow.h  ui_newmap.h  ui_pickmatchwindow.h
Editor_autogen/: mocs_compilation.cpp
Editor_autogen/3YJK5W5UP7/: qrc_resources.cpp
Editor_autogen/BKOSSZA72R/: moc_gamescene.cpp  moc_gamescene.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
Editor_autogen/NCOAY74VWJ/: moc_gamescene.cpp  moc_gamescene.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
docs/: informe.md
game/assets/: config.yaml  resources.qrc
game/client/: clientmainwindow.ui  enterportwindow.ui  pickmatchwindow.ui
game/client/headers/: AttackRequest.h  Attacker.h  BarracksUi.h  BuildingFactory.h  BuildingUi.h  CeldaUi.h  Character.h  Client.h  ClientUnit.h  CreateBarracks.h  CreateBuilding.h  CreateHarvester.h  CreateHeavyInfantry.h  CreateLightInfantry.h  CreateUnidadLigera.h  CreateUnit.h  Damageable.h  Event.h  Game.h  InputEvent.h  MainWindowLobby.h  MapUi.h  MoveQuery.h  Protocol.h  ReceiveThread.h  Request.h  Response.h  SdlEntity.h  SendThread.h  Subscriber.h  TerrainRepository.h  TextureManager.h  UpdateBuilding.h  UpdateTerrain.h  UpdateUnit.h  UpdateVehicle.h  VehicleUi.h  character.h  movable.h
game/client/headers/audio/: audioPlayer.h
game/client/headers/building_type/: BuildingType.h  UnitType.h
game/client/headers/gui/: BuildingButtonUi.h  ButtonUi.h  UnitButtonUi.h  gui.h
game/client/sources/: AttackRequest.cpp  BarracksUi.cpp  BuildingFactory.cpp  BuildingUi.cpp  CeldaUi.cpp  Character.cpp  Client.cpp  ClientMain.cpp  ClientUnit.cpp  CreateBarracks.cpp  CreateBuilding.cpp  CreateHarvester.cpp  CreateHeavyInfantry.cpp  CreateLightInfantry.cpp  CreateUnidadLigera.cpp  CreateUnit.cpp  Game.cpp  InputEvent.cpp  MainWindowLobby.cpp  MapUi.cpp  MoveQuery.cpp  Protocol.cpp  ReceiveThread.cpp  Request.cpp  Response.cpp  SendThread.cpp  TerrainRepository.cpp  TextureManager.cpp  UpdateBuilding.cpp  UpdateUnit.cpp  UpdateVehicle.cpp  VehicleUi.cpp  character.cpp  movable.cpp
game/client/sources/building_type/: BuildingType.cpp  UnitType.cpp
game/client/sources/gui/: BuildingButtonUi.cpp  ButtonUi.cpp  UnitButtonUi.cpp  gui.cpp
game/common/headers/: BlockingQueue.h  Building.h  Chronometer.h  Constantes.h  Entity.h  Event.h  EventsQueue.h  LightInfantry.h  ProtectedQueue.h  Resolver.h  Socket.h  Thread.h  Unit.h  Units.h  Unity.h  Vehicle.h
game/common/sources/: BlockingQueue.cpp  Building.cpp  Chronometer.cpp  Entity.cpp  Event.cpp  EventsQueue.cpp  LightInfantry.cpp  ProtectedQueue.cpp  Resolver.cpp  Socket.cpp  Thread.cpp  Unit.cpp  Unity.cpp  Vehicle.cpp
game/editor/: mainwindow.ui  newmap.ui
game/editor/headers/: celda_editor.h  cell.h  editorwindow.h  gamescene.h  graphics_map.h  mainwindow.h  mapa_editor.h  shared_brush.h  terrain.h
game/editor/sources/: celda_editor.cpp  cell.cpp  editor.cpp  editorwindow.cpp  gamescene.cpp  graphics_map.cpp  mainwindow.cpp  terrain.cpp
game/server/headers/: ClientsMonitor.h  CreateBuildingEvent.h  Navigator.h  Node.h  Player.h  RepositionEvent.h  Server.h  ServerCell.h  ServerEvent.h  ServerMap.h  ServerProtocol.h  ThCLient.h
game/server/headers/buildings/: AirTrap.h  Barracks.h  Building.h  ConstructionCenter.h  HeavyFactory.h  LightFactory.h  Palace.h  Refinery.h  Silo.h
game/server/headers/events/: AttackEnemyEvent.h  CreateBuildingEvent.h  RepositionEvent.h  ServerEvent.h  SpawnUnitEvent.h  SpawnVehicleEvent.h
game/server/headers/map/: CliffsCell.h  DunesCell.h  Navigator.h  Node.h  RockCell.h  SandCell.h  ServerCell.h  ServerMap.h  TopsCell.h
game/server/headers/model/: ClientsMonitor.h  Lobby.h  MovableEntity.h  Node.h  Player.h  Room.h  Server.h  ServerEntity.h  ServerProtocol.h  Snapshot.h  ThCLient.h
game/server/headers/units/: Fremen.h  HeavyInfantry.h  LightInfantry.h  Sardaukar.h  Unit.h
game/server/headers/vehicles/: Harvester.h  Vehicle.h
game/server/headers/weapons/: AssaultRifle.h  Cannon.h  Cannon22mm.h  MissileLauncher.h  PlasmaCannon.h  SoundWave.h  Weapon.h
game/server/maps/: data.yaml
game/server/sources/: ClientsMonitor.cpp  CreateBuildingEvent.cpp  Navigator.cpp  Node.cpp  Player.cpp  RepositionEvent.cpp  Server.cpp  ServerCell.cpp  ServerMap.cpp  ServerProtocol.cpp  SpawnUnitEvent.cpp  ThClient.cpp  server_main.cpp
game/server/sources/buildings/: AirTrap.cpp  Barracks.cpp  Building.cpp  ConstructionCenter.cpp  HeavyFactory.cpp  LightFactory.cpp  Palace.cpp  Refinery.cpp  Silo.cpp
game/server/sources/events/: AttackEnemyEvent.cpp  CreateBuildingEvent.cpp  RepositionEvent.cpp  SpawnUnitEvent.cpp  SpawnVehicleEvent.cpp
game/server/sources/map/: CliffsCell.cpp  DunesCell.cpp  Navigator.cpp  Node.cpp  RockCell.cpp  SandCell.cpp  ServerCell.cpp  ServerMap.cpp  TopsCell.cpp
game/server/sources/model/: ClientsMonitor.cpp  Lobby.cpp  MovableEntity.cpp  Navigator.cpp  Node.cpp  Player.cpp  Room.cpp  Server.cpp  ServerEntity.cpp  ServerProtocol.cpp  Snapshot.cpp  ThClient.cpp  Unit.cpp  server_main.cpp
game/server/sources/units/: Fremen.cpp  HeavyInfantry.cpp  LightInfantry.cpp  Sardaukar.cpp  Unit.cpp
game/server/sources/vehicles/: Harvester.cpp  Vehicle.cpp
game/server/sources/weapons/: AssaultRifle.cpp  Cannon.cpp  Cannon22mm.cpp  (+4 more)
headers/: Building.h  Celda.h  CeldaAStar.h  CeldaServidor.h  Entity.h  Mapa.h  Navegador.h  Navigator.h  ServerCell.h  ServerMap.h  Unity.h
headers/editor/: celda_editor.h  cell.h  gamescene.h  mainwindow.h  mapa_editor.h
resources/: resources.qrc
sources/: Celda.cpp  CeldaAStar.cpp  CeldaServidor.cpp  Mapa.cpp  Navegador.cpp  Navigator.cpp  ServerCell.cpp  ServerMap.cpp  mainwindow.ui  server_main.cpp
sources/editor/: celda_editor.cpp  cell.cpp  cell.h  editor.cpp  gamescene.cpp  gamescene.h  mainwindow.cpp  mainwindow.h
(+6 files in other folders)
